# speech-dataset-parser

./: .gitignore  CITATION.cff  MANIFEST.in  Pipfile  README.md  dependencies.md  deploy-PyPI.sh  deploy.sh  playground.sh  pyproject.toml  pytest.ini  setup.cfg  setup.py
speech_dataset_parser/: __init__.py  arctic.py  custom.py  gender.py  language.py  libritts.py  ljs.py  mailabs.py  mailabs.tests.py  thchs.py  thchs.tests.py  thchs_kaldi.py
src/speech_dataset_converter_cli/: argparse_helper.py  cli.py  convert_l2arctic.py  convert_ljs.py  convert_thchs.py  convert_thchs_cslt.py  convert_thchs_slr.py  restore_directory_structure.py  utils.py
src/speech_dataset_converter_cli_tests/: test_l2arctic.py  test_ljs.py  test_thchs.py  test_thchs_slr.py
src/speech_dataset_parser/: __init__.py  arctic.py  custom.old.py  custom.py  custom.tests.py  custom1.py  custom2.py  data.py  export.py  language.py  libritts.py  ljs.py  mailabs.py  mailabs.tests.py  parse.py  text_format.py  thchs.py  thchs_kaldi.py  types.py  utils.py
src/speech_dataset_parser_api/: __init__.py  parse.py
src/speech_dataset_parser_app/: cli.py  ljs.py
src/speech_dataset_parser_core/: convert_ljs.py  globals.py  parse.py  types.py  utils.py  validation.py
src/speech_dataset_parser_old/: __init__.py  arctic.py  custom.py  custom1.py  custom2.py  data.py  export.py  gender.py  language.py  libritts.py  ljs.py  mailabs.py  thchs.py  thchs_kaldi.py
src/speech_dataset_parser_old_tests/: test_custom.py  test_libritts.py  test_ljs.py  test_thchs.py
src/speech_dataset_parser_tests/: test_arctic.py  test_libritts.py  test_ljs.py  test_mailabs.py  test_parse.py  test_thchs.py  test_thchs_kaldi.py
tests/: test_arctic.py  test_custom.py  test_libritts.py  test_mailabs.py  test_thchs.py
