[project]
name = "speech_dataset_parser"
version = "0.0.1"
description = "Library to parse speech datasets stored in a generic format. A tool (CLI) for converting common datasets like LJ Speech into a generic format is included."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Stefan Taubert", email = "stefan.taubert@posteo.me"}
]
maintainers = [
  {name = "Stefan Taubert", email = "stefan.taubert@posteo.me"},
]
keywords = [
  "Text-to-speech",
  "Speech synthesis",
  "Corpus",
  "Utils",
  "Language",
  "Linguistics"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Operating System :: OS Independent",
  "Operating System :: MacOS",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: BSD",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "tqdm",
  "TextGrid>=1.5",
  "ordered_set>=4.1.0",
]

[project.urls]
Homepage = "https://github.com/stefantaubert/speech-dataset-parser"
Issues = "https://github.com/stefantaubert/speech-dataset-parser/issues"

[project.scripts]
dataset-converter-cli = "speech_dataset_converter_cli.cli:run_prod"

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "speech_dataset_parser",
  "speech_dataset_parser_tests",
  "speech_dataset_parser_tests.*",
  "speech_dataset_converter_cli",
  "speech_dataset_converter_cli_tests",
  "speech_dataset_converter_cli_tests.*",
]
exclude = [
  "speech_dataset_parser_debug",
  "speech_dataset_converter_cli_debug",
  "speech_dataset_parser_old",
  "speech_dataset_parser_old_tests",
]
namespaces = true

[tool.pytest.ini_options]
log_cli = true
log_level = "DEBUG"
testpaths = [
  "src/speech_dataset_parser_tests",
  "src/speech_dataset_converter_cli_tests",
]
console_output_style = "count"

[tool.autopep8]
indent_size = 2
ignore = ["E121"]
max_line_length = 100

[tool.isort]
line_length = 100
indent = 2

[tool.pyright]
root = ["src"]
include = ["src"]
pythonPlatform = "All"
typeCheckingMode = "off"
stubPath = ""
exclude = [
  "**/node_modules",
  "**/__pycache__",
  ".git",
  "**/*.egg-info",
  "**/*_debug",
]
useLibraryCodeForTypes = true

[build-system]
requires = [
  "setuptools >= 40.9.0",
  "wheel",
]
build-backend = "setuptools.build_meta"
