[metadata]
name = speech_dataset_parser
version = 1.0.0
author="Stefan Taubert"
author_email="stefan.taubert@posteo.de"
description="Parser for several speech datasets."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stefantaubert/speech-dataset-parser.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    pandas
    python-dateutil
    pytz
    six
    tqdm
    wget

[options.packages.find]
where = src
